--- a/canoCurto-masculino.html
+++ b/canoCurto-masculino.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cano Curto Masculina - Meias Sene</title>
+    <title>Cano Curto Masculino - Meias Sene</title>
     <link rel="stylesheet" href="esportvaMasc.css">
     <link rel="icon" href="img/iconLogo.png">
 </head>
@@ -38,7 +38,7 @@
                             <div class="submenuItem">
                                 <a href="babyDesMasc.html">Baby Masculina Desenhada</a>
                                 <a href="babyColorsMasc.html">Baby Masculina Color’s</a>
-                                <a href="babySapMasc.html">Baby Masculina Malha Persa<br>/ Baby Feminina Sapatilha</a>
+                                <a href="babySapMasc.html">Baby Masculina Malha Persa<br>/ Baby Masculina Sapatilha</a>
                             </div>
                         </div>
                     </div>
@@ -189,16 +189,18 @@
             <h1 class="titulo">Cano Curto / Cano Curto Desenhada Masculino</h1>
             <div class="todas-as-meias-des-masc">
 
-                <div class="Quadrado-da-meia-CanoCurto-Desenhada-Cinza" id="div-meia">
+
+
+                <div class="Quadrado-da-meia-CanoCurto-Desenhada-Cinza-Preta" id="div-meia">
                     <div class="container"> <img src="img-masculino/CanoCurto-Desenhada-Cinza.png"
-                            alt="Meia Masculina Esportiva Lisa">
+                            alt="Meia Desenhada Masculina">
                     </div>
                     <div class="informacoes-meia">
-                        <h3 class="Subtitulo">Meia Cano Curto Desenhada Cinza e Azul </h3>
+                        <h3 class="Subtitulo">Meia Cano Curto Desenhada Cinza e Azul Masculina</h3>
                         <h3 class="numeracao">39 á 43</h3>
-                        <div class="cores-preta-cinza">
-                            <div class="CorCinza"></div>
-                            <div class="CorPreta"></div>
+                        <div class="coresDesenhadas-01">
+                            <div class="cinzaDesenhada01"></div>
+                            <div class="pretaDesenhada01"></div>
 
                         </div>
                     </div>
@@ -209,16 +211,18 @@
                     </div>
                 </div>
 
-                <div class="Quadrado-da-meia-CanoCurto-Desenhada-CinzaAzulEscuro" id="div-meia">
+                <div class="Quadrado-da-meia-CanoCurto-Desenhada-FaixaCinza" id="div-meia">
                     <div class="container"> <img src="img-masculino/CanoCurto-DesenhadaFaixa-CinzaAzulEscuro.png"
-                            alt="Meia Cano Curto desenhada masculina">
+                            alt="Meia Desenhada Masculina">
                     </div>
                     <div class="informacoes-meia">
-                        <h3 class="Subtitulo">Meia Cano Curto Desenhada Faixa Cinza </h3>
+                        <h3 class="Subtitulo">Meia Cano Curto Desenhada Faixa Cinza Masculina</h3>
                         <h3 class="numeracao">39 á 43</h3>
-                        <div class="cores-Branca-AzulEscuro">
-                            <div class="Corbranca"></div>
-                            <div class="AzulMarinho"></div>
+                        <div class="coresDesenhada-02">
+                            <div class="brancaDesenhada02"></div>
+                            <div class="azulMarinhoDesenhada02"></div>
+
+
                         </div>
                     </div>
                     <div class="preco-informacoes">
@@ -228,35 +232,53 @@
                     </div>
                 </div>
 
-                <div class="Quadrado-da-meia-CanoCurto-CinzaAzulMarinho" id="div-meia">
+                <div class="Quadrado-da-meia-CanoCurto-Desenhada-Marinho-Vermelho" id="div-meia">
                     <div class="container"> <img src="img-masculino/CanoCurtoCinza-FaixaAzulMarinho.png"
-                            alt="Meia Esportiva S Masculina">
-                    </div>
-                    <div class="informacoes-meia">
-                        <h3 class="Subtitulo">Meia Cano Curto Desenhada Marinho/Vermelha </h3>
-                        <h3 class="numeracao">39 á 43</h3>
-                        <div class="cores-Vermelho-Laranja">
-                            <div class="Vermelho"></div>
-                            <div class="Laranja"></div>
-
-                        </div>
-                    </div>
-                    <div class="preco-informacoes">
-                        <h3 class="preco">R$ 4,80</h3>
-                        <h3 class="texto-a-vista">Á Vista</h3>
-                        <button class="botao-euQuero">Eu Quero!</button>
-                    </div>
-                </div>
-
-                <div class="Quadrado-da-meia-Kit-BrancoAzulEScuro-Chumbo-BrancoCInza" id="div-meia">
-                    <div class="container"> <img
-                            src="img-masculino/CanoCurto-Kit3coresBrancoAzulEScuro-Chumbo-BrancoCInza.png"
                             alt="Meia Esportiva Polo Masculina">
                     </div>
                     <div class="informacoes-meia">
-                        <h3 class="Subtitulo">Meia Cano Curto Desenhada - Kit Nº2</h3>
+                        <h3 class="Subtitulo">Meia Cano Curto Desenhada Marinho/Vermelha Masculina</h3>
                         <h3 class="numeracao">39 á 43</h3>
-                        <div class="Kit-BrancoAzulEScuro-Chumbo-BrancoCInza">
+                        <div class="coresDesenhada-03">
+                            <div class="vermelho03"></div>
+                            <div class="laranja03"></div>
+
+                        </div>
+                    </div>
+                    <div class="preco-informacoes">
+                        <h3 class="preco">R$ 4,80</h3>
+                        <h3 class="texto-a-vista">Á Vista</h3>
+                        <button class="botao-euQuero">Eu Quero!</button>
+                    </div>
+                </div>
+
+                <div class="Quadrado-da-meia-CanoCurto-LisaBranca" id="div-meia">
+                    <div class="container"> <img src="img-masculino/CanoCurtoBranca.png"
+                            alt="Meia Cano Curto Lisa Branca Masculina">
+                    </div>
+                    <div class="informacoes-meia">
+                        <h3 class="Subtitulo">Meia Cano Curto Lisa Branca Masculina</h3>
+                        <h3 class="numeracao">39 á 43</h3>
+                        <div class="cores-lisas-neutras">
+                            <div class="brancaLisa04"></div>
+                            <div class="pretaLisa04"></div>
+                            <div class="cinzaLisa04"></div>
+                        </div>
+                    </div>
+                    <div class="preco-informacoes">
+                        <h3 class="preco">R$ 4,70</h3>
+                        <h3 class="texto-a-vista">Á Vista</h3>
+                        <button class="botao-euQuero">Eu Quero!</button>
+                    </div>
+                </div>
+                <div class="Quadrado-da-meia-CanoCurto-Desenhada-Kit01" id="div-meia">
+                    <div class="container"> <img src="img-masculino/CanoCurto-Kit-Cinza-Azul-Branco.png"
+                            alt="Meia Cano Curto Desenhada Masculina - Kit Nº1">
+                    </div>
+                    <div class="informacoes-meia">
+                        <h3 class="Subtitulo">Meia Cano Curto Desenhada Masculina - Kit Nº1</h3>
+                        <h3 class="numeracao">39 á 43</h3>
+                        <div class="corKit-01">
                             <div class="Kit01">
                                 <p>1</p>
                             </div>
@@ -270,15 +292,16 @@
                     </div>
                 </div>
 
-                <div class="Quadrado-da-meia-Kit-Cinza-Azul-Branco" id="div-meia">
-                    <div class="container"> <img src="img-masculino/CanoCurto-Kit-Cinza-Azul-Branco.png"
-                            alt="Meia Esportiva Aero Branca Masculina">
+                <div class="Quadrado-da-meia-CanoCurto-Desenhada-Kit02" id="div-meia">
+                    <div class="container">
+                        <img src="img-masculino/CanoCurto-Kit3coresBrancoAzulEScuro-Chumbo-BrancoCInza.png"
+                            alt="Meia Cano Curto Desenhada Masculina - Kit Nº2">
                     </div>
                     <div class="informacoes-meia">
-                        <h3 class="Subtitulo">Meia Cano Curto Desenhada - Kit Nº1</h3>
+                        <h3 class="Subtitulo">Meia Cano Curto Desenhada Masculina - Kit Nº2</h3>
                         <h3 class="numeracao">39 á 43</h3>
-                        <div class="cores-Kit-Cinza-Azul-Branco">
-                            <div class="kit02">
+                        <div class="corKit-02">
+                            <div class="Kit02">
                                 <p>1</p>
                             </div>
 
@@ -291,55 +314,37 @@
                     </div>
                 </div>
 
-                <div class="Quadrado-da-meia-CanoCurto-Branca" id="div-meia">
-                    <div class="container"> <img src="img-masculino/CanoCurtoBranca.png"
-                            alt="Meia Esportiva Masculina - Kit Nº1">
-                    </div>
-                    <div class="informacoes-meia">
-                        <h3 class="Subtitulo">Meia Cano Curto Lisa Branca </h3>
-                        <h3 class="numeracao">39 á 43</h3>
-                        <div class="cores-branca-preta-cinzaMeias">
-                            <div class="CorBrancaMeia"></div>
-                            <div class="CorCinzaMeia"></div>
-                            <div class="CorPretaMeia"></div>
-                        </div>
-                    </div>
-                    <div class="preco-informacoes">
-                        <h3 class="preco">R$ 4,70</h3>
-                        <h3 class="texto-a-vista">Á Vista</h3>
-                        <button class="botao-euQuero">Eu Quero!</button>
-                    </div>
-                </div>
 
-                <div class="Quadrado-da-meia-KitPreto" id="div-meia">
+
+                <div class="Quadrado-da-meia-CanoCurto-LisaKit03" id="div-meia">
                     <div class="container"> <img src="img-masculino/CanoCurto-KitPreto.png"
-                            alt="Meia Esportiva Cano Curto Lisa Masculina">
+                            alt="Meia Cano Curto Preta Lisa Masculina - Kit 3 Pares">
                     </div>
                     <div class="informacoes-meia">
-                        <h3 class="Subtitulo">Meia Cano Curto Lisa - Kit 3 Pares</h3>
+                        <h3 class="Subtitulo">Meia Cano Curto Preta Lisa Masculina - Kit 3 Pares</h3>
                         <h3 class="numeracao">39 á 43</h3>
-                        <div class="cores-branca-preta-cinza-Kit">
-                            <div class="CorBrancaKit"></div>
-                            <div class="CorCinzaKit"></div>
-                            <div class="CorPretaKit"></div>
+                        <div class="coresKit-03">
+                            <div class="brancoKit03"></div>
+                            <div class="pretoKit03"></div>
+                            <div class="cinzaKit03"></div>
                         </div>
                     </div>
                     <div class="preco-informacoes">
-                        <h3 class="preco">R$ 6,00</h3>
+                        <h3 class="preco">R$ 18,00</h3>
                         <h3 class="texto-a-vista">Á Vista</h3>
                         <button class="botao-euQuero">Eu Quero!</button>
                     </div>
                 </div>
 
-                <div class="Quadrado-da-meia-kit-preto-branco-cinza" id="div-meia">
+                <div class="Quadrado-da-meia-CanoCurto-LisaKit04" id="div-meia">
                     <div class="container"> <img src="img-masculino/CanoCurto-Kit3Branco-Cinza-Preto.png"
-                            alt="Meia Esportiva Masculina - Kit Nº2">
+                            alt="Meia Cano Curto Lisa Masculina - Kit Nº1">
                     </div>
                     <div class="informacoes-meia">
-                        <h3 class="Subtitulo">Meia Esportiva Masculina - Kit Nº2</h3>
+                        <h3 class="Subtitulo">Meia Cano Curto Lisa Masculina - Kit Nº1</h3>
                         <h3 class="numeracao">39 á 43</h3>
-                        <div class="cores-preto-branco-cinza-kit3pares">
-                            <div class="kit03">
+                        <div class="corKit-04">
+                            <div class="Kit04">
                                 <p>1</p>
                             </div>
                         </div>
@@ -350,8 +355,6 @@
                         <button class="botao-euQuero">Eu Quero!</button>
                     </div>
                 </div>
-
-
             </div>
         </section>
     </main>
@@ -435,39 +438,42 @@
     </footer>
     <script>
         const imagensPorCor = {
-
-            'Quadrado-da-meia-CanoCurto-Desenhada-CinzaAzulEscuro': {
-                Corbranca: 'img-masculino/CanoCurtoBranca-FaixaMarinho.png',
-                AzulMarinho: 'img-masculino/CanoCurto-DesenhadaFaixa-CinzaAzulEscuro.png'
-            },
-            'Quadrado-da-meia-CanoCurto-Desenhada-Cinza': {
-                CorCinza: 'img-masculino/CanoCurto-Desenhada-Cinza.png',
-                CorPreta: 'img-masculino/CanoCurtoChumbo.png'
-            },
-            'Quadrado-da-meia-Kit-BrancoAzulEScuro-Chumbo-BrancoCInza': {
-                Kit01: 'img-masculino/CanoCurto-Kit3coresBrancoAzulEScuro-Chumbo-BrancoCInza.png'
+            'Quadrado-da-meia-CanoCurto-Desenhada-Cinza-Preta': {
+                cinzaDesenhada01: 'img-masculino/CanoCurto-Desenhada-Cinza.png',
+                pretaDesenhada01: 'img-masculino/CanoCurtoChumbo.png'
 
             },
-            'Quadrado-da-meia-Kit-Cinza-Azul-Branco': {
-                kit02: 'img-masculino/CanoCurto-Kit-Cinza-Azul-Branco.png'
+            'Quadrado-da-meia-CanoCurto-Desenhada-FaixaCinza': {
+                brancaDesenhada02: 'img-masculino/CanoCurtoBranca-FaixaMarinho.png',
+                azulMarinhoDesenhada02: 'img-masculino/CanoCurto-DesenhadaFaixa-CinzaAzulEscuro.png'
             },
-            'Quadrado-da-meia-CanoCurto-Branca': {
-                CorBrancaMeia: 'img-masculino/CanoCurtoBranca.png',
-                CorPretaMeia: 'img-masculino/CanoCurtoPreta.png',
-                CorCinzaMeia: 'img-masculino/CanoCurtoCinza.png'
+            'Quadrado-da-meia-CanoCurto-Desenhada-Marinho-Vermelho': {
+                vermelho03: 'img-masculino/CanoCurtoCinza-FaixaAzulMarinho.png',
+                laranja03: 'img-masculino/CanoCurtoBranca-FaixaAzulMarinho.png'
+
             },
-            'Quadrado-da-meia-KitPreto': {
-                CorBrancaKit: 'img-masculino/CanoCurto-KitBranco.png',
-                CorPretaKit: 'img-masculino/CanoCurto-KitPreto.png',
-                CorCinzaKit: 'img-masculino/CanoCurto-KitCinza.png'
+            'Quadrado-da-meia-CanoCurto-LisaBranca': {
+                brancaLisa04: 'img-masculino/CanoCurtoBranca.png',
+                pretaLisa04: 'img-masculino/CanoCurtoPreta.png',
+                cinzaLisa04: 'img-masculino/CanoCurtoCinza.png'
+
             },
-            'Quadrado-da-meia-kit-preto-branco-cinza': {
-                kit03: 'img-masculino/CanoCurto-Kit3Branco-Cinza-Preto.png'
+            'Quadrado-da-meia-CanoCurto-Desenhada-Kit01': {
+                Kit01: 'img-masculino/CanoCurto-Kit-Cinza-Azul-Branco.png'
             },
-            'Quadrado-da-meia-CanoCurto-CinzaAzulMarinho': {
-                Vermelho: 'img-masculino/CanoCurtoCinza-FaixaAzulMarinho.png',
-                Laranja: 'img-masculino/CanoCurtoBranca-FaixaAzulMarinho.png'
-            }
+            'Quadrado-da-meia-CanoCurto-Desenhada-Kit02': {
+                Kit02: 'img-masculino/CanoCurto-Kit3coresBrancoAzulEScuro-Chumbo-BrancoCInza.png'
+            },
+            'Quadrado-da-meia-CanoCurto-LisaKit03': {
+                brancoKit03: 'img-masculino/CanoCurto-KitBranco.png',
+                pretoKit03: 'img-masculino/CanoCurto-KitPreto.png',
+                cinzaKit03: 'img-masculino/CanoCurto-KitCinza.png'
+
+            },
+            'Quadrado-da-meia-CanoCurto-LisaKit04': {
+                Kit04: 'img-masculino/CanoCurto-Kit3Branco-Cinza-Preto.png'
+            },
+
         };
 
         document.querySelectorAll('.todas-as-meias-des-masc > div').forEach((quadrado) => {
@@ -475,7 +481,7 @@
             const imgMeia = quadrado.querySelector('img');
 
             // Seleciona todas as cores disponíveis para o quadrado atual
-            const cores = quadrado.querySelectorAll('.Corbranca, .AzulMarinho, .CorCinza, .CorPreta, .Vermelho, .Laranja, .Kit01, .kit02, kit03,  .CorBrancaMeia, .CorPretaMeia, .CorCinzaMeia, .kit03, .CorBrancaKit, .CorPretaKit, .CorCinzaKit');
+            const cores = quadrado.querySelectorAll('.cinzaDesenhada01, .pretaDesenhada01, .brancaDesenhada02, .azulMarinhoDesenhada02, .vermelho03, .laranja03, .brancaLisa04, .pretaLisa04, .cinzaLisa04, .Kit01, .Kit02, .Kit04, .brancoKit03, .pretoKit03, .cinzaKit03');
 
             // Obtém o nome da classe do quadrado (primeiro nome de classe)
             const quadradoId = quadrado.className.split(' ')[0];
@@ -525,10 +531,10 @@
 
         });
 
-        document.querySelectorAll('.cores-preta-cinza div, .cores-Vermelho-Laranja div, .cores-branca-preta-cinzaMeias div, .Kit-BrancoAzulEScuro-Chumbo-BrancoCInza div, .cores-branca-preta-cinza-Kit div, .cores-preto-branco-cinza-kit3pares div, .cores-Branca-AzulEscuro div').forEach(cor => {
+        document.querySelectorAll('.cores-Kit04 div, .cor-Kit02 div, .cor-Kit01 div, .cores-lisas-neutras div, .coresDesenhada-03 div, .coresDesenhada-02 div, .coresDesenhadas-01 div, .coresKit-03 div').forEach(cor => {
             cor.addEventListener('click', function () {
                 // Remove a borda de qualquer cor previamente selecionada em todos os grupos de cores
-                document.querySelectorAll('.cores-preta-cinza div, .cores-Vermelho-Laranja div, .cores-branca-preta-cinzaMeias div, .Kit-BrancoAzulEScuro-Chumbo-BrancoCInza div, .cores-branca-preta-cinza-Kit div, .cores-preto-branco-cinza-kit3pares div, .cores-Branca-AzulEscuro div').forEach(c => {
+                document.querySelectorAll('.cores-branca-preta-cinza div, .cores-branca-preta-cinza02 div, .cores-branca-preta-cinza03 div, .cores-branca-preta-cinza04 div, .cores-branca-preta-cinza05 div, .cores-branca-preta-cinza06 div, .cores-branca-preta-cinza07 div, .cores-branca-preta-cinza08 div, .cores-branca-preta-cinza09 div').forEach(c => {
                     c.classList.remove('selected');
                 });
 
@@ -537,7 +543,6 @@
                 console.log('Classe "selected" adicionada a:', this); // Verifique se o elemento correto está sendo selecionado
             });
         });
-
     </script>
     <script>
         // CABEÇALHO
