--- a/proMasculina.html
+++ b/proMasculina.html
@@ -38,7 +38,7 @@
                             <div class="submenuItem">
                                 <a href="babyDesMasc.html">Baby Masculina Desenhada</a>
                                 <a href="babyColorsMasc.html">Baby Masculina Color’s</a>
-                                <a href="babySapMasc.html">Baby Masculina Malha Persa<br>/ Baby Feminina Sapatilha</a>
+                                <a href="babySapMasc.html">Baby Masculina Malha Persa<br>/ Baby Masculina Sapatilha</a>
                             </div>
                         </div>
                     </div>
