--- a/canoCurtoFem.html
+++ b/canoCurtoFem.html
@@ -346,24 +346,24 @@
                     <p class="titulo-rodape">CATEGORIAS</p>
                     <div class="categGeral-rodape">
                         <div class="subCategoria1-rodape">
-                            <a href="babyFeminino">
+                            <a href="babyDesFem.html">
                                 <p class="texto2-rodape">Baby Feminino</p>
                             </a>
-                            <a href="babyMasculino">
+                            <a href="babyColorsMasc.html">
                                 <p class="texto2-rodape">Baby Masculino</p>
                             </a>
-                            <a href="kidsFeminino">
+                            <a href="kidsFem.html">
                                 <p class="texto2-rodape">Kids Feminino</p>
                             </a>
                         </div>
                         <div class="subCategoria2-rodape">
-                            <a href="kidsMasculino">
+                            <a href="kidsMas.html">
                                 <p class="texto2-rodape">Kids Masculino</p>
                             </a>
-                            <a href="adultoFeminino">
+                            <a href="canoCurtoFem.html">
                                 <p class="texto2-rodape">Adulto Feminino</p>
                             </a>
-                            <a href="adultoMasculino">
+                            <a href="canoCurtoMasculina.html">
                                 <p class="texto2-rodape">Adulto Masculino</p>
                             </a>
                         </div>
