--- a/CanoCurtoCasualFem.html
+++ b/CanoCurtoCasualFem.html
@@ -188,7 +188,7 @@
             <h1 class="titulo">Casual Feminino Cano Curto </h1>
             <div class="todas-as-meias-feminina-cano-curto">
                 <div class="Quadrado-da-meia-Casual-Listrada-PretaRosa" id="div-meia-cano-curto">
-                    <div class="container"> <img src="img-feminino/MeiaCanoCurtoCasualListrada-PretaRosa.png" alt="">
+                    <div class="container" > <img class="meiaCasual" src="img-feminino/MeiaCanoCurtoCasualListrada-PretaRosa.png" alt="">
                     </div>
                     <div class="informacoes-meia-cano-curto-feminino">
                         <h3 class="CanoCurtoSubtitulo"> Casual Cano Curto - Chevron Marinho</h3>
@@ -212,8 +212,8 @@
 
 
                 <div class="Quadrado-da-meia-Casual-DesenhadaCoracao-Branca" id="div-meia-cano-curto">
-                    <div class="container"> <img src="img-feminino/MeiaCanoCurtoCasualDesenhada-BrancaCoracao.png"
-                            alt=""></div>
+                    <div class="container"> <img class="meiaCasual" src="img-feminino/MeiaCanoCurtoCasualDesenhada-BrancaCoracao.png"
+                            alt="Casual Cano Curto - Coração Branco"></div>
                     <div class="informacoes-meia-cano-curto-feminino">
                         <h3 class="CanoCurtoSubtitulo"> Casual Cano Curto - Coração Branco</h3>
                         <h3 class="numeracao"> 34 á 38</h3>
@@ -239,7 +239,7 @@
 
 
                 <div class="Quadrado-da-meia-Casual-Branca-Rendada" id="div-meia-cano-curto">
-                    <div class="container" id="container"> <img src="img-feminino/MeiaCanoCurtoCasual-BrancaRendada.png"
+                    <div class="container" id="container"> <img class="meiaCasual" src="img-feminino/MeiaCanoCurtoCasual-BrancaRendada.png"
                             alt=""></div>
                     <div class="informacoes-meia-cano-curto-feminino">
                         <h3 class="CanoCurtoSubtitulo"> Casual Cano Curto - Rendada Branca</h3>
